api_versioned_docs/version-12.0.5/avalonia/controls/documents/textmodel/markdownnodekinds.mdx
---
title: 'MarkdownNodeKinds'
hide_title: true
slug: '/avalonia/controls/documents/textmodel/markdownnodekinds'
uid: 'Avalonia.Controls.Documents.TextModel.MarkdownNodeKinds'
commentId: 'T:Avalonia.Controls.Documents.TextModel.MarkdownNodeKinds'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.Markdown'
assembly: 'Avalonia.Controls.Markdown'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls.Documents.TextModel'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">MarkdownNodeKinds Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls.Documents.TextModel</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.Markdown</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.Markdown</code>
</div>
</div>

<div className="apiref-page__lead">

Custom [Avalonia.Controls.Documents.TextModel.TextDocumentNodeKind](xref:Avalonia.Controls.Documents.TextModel.TextDocumentNodeKind) registrations for Markdown-specific elements.

</div>

<div className="apiref-page__signature">

```csharp
public class MarkdownNodeKinds
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> MarkdownNodeKinds
</div>
</div>

## Fields

| Name | Description |
| --- | --- |
| [AlertBlock](#uid-36646b9bbe) | Node kind for GitHub-style alert blocks (note, warning, tip, etc.). |
| [CodeBlock](#uid-56ed0e5058) | Node kind for fenced code blocks. |
| [CodeInline](#uid-445ffc5f0f) | Node kind for inline code spans. |
| [Heading](#uid-8bd5bee9d8) | Node kind for Markdown headings (H1–H6). |
| [Image](#uid-74e3598dfd) | Node kind for inline image elements. |
| [QuoteBlock](#uid-36731ae34c) | Node kind for blockquote sections. |
| [TaskListItem](#uid-469bbad8f9) | Node kind for task list items (checkboxes). |
| [ThematicBreak](#uid-9129cb6fc4) | Node kind for thematic breaks (horizontal rules). |

<section className="apiref-page__member-entry">

<span id="uid-36646b9bbe"></span>

### AlertBlock Field

Node kind for GitHub-style alert blocks (note, warning, tip, etc.).

```csharp
public Avalonia.Controls.Documents.TextModel.TextDocumentNodeKind AlertBlock
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-56ed0e5058"></span>

### CodeBlock Field

Node kind for fenced code blocks.

```csharp
public Avalonia.Controls.Documents.TextModel.TextDocumentNodeKind CodeBlock
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-445ffc5f0f"></span>

### CodeInline Field

Node kind for inline code spans.

```csharp
public Avalonia.Controls.Documents.TextModel.TextDocumentNodeKind CodeInline
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-8bd5bee9d8"></span>

### Heading Field

Node kind for Markdown headings (H1–H6).

```csharp
public Avalonia.Controls.Documents.TextModel.TextDocumentNodeKind Heading
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-74e3598dfd"></span>

### Image Field

Node kind for inline image elements.

```csharp
public Avalonia.Controls.Documents.TextModel.TextDocumentNodeKind Image
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-36731ae34c"></span>

### QuoteBlock Field

Node kind for blockquote sections.

```csharp
public Avalonia.Controls.Documents.TextModel.TextDocumentNodeKind QuoteBlock
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-469bbad8f9"></span>

### TaskListItem Field

Node kind for task list items (checkboxes).

```csharp
public Avalonia.Controls.Documents.TextModel.TextDocumentNodeKind TaskListItem
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-9129cb6fc4"></span>

### ThematicBreak Field

Node kind for thematic breaks (horizontal rules).

```csharp
public Avalonia.Controls.Documents.TextModel.TextDocumentNodeKind ThematicBreak
```

</section>

</ApiRefPage>

